Usability and Readability Fixes (#38)
* Fixes z-index of the epic labels and action button

* Fixed lots of font color issues and other bugs

Pretty big change, but fixes most of the issues that were mentioned and a lot of the issues I was noticing.

* Update jira-dark-gray.user.css

I forgot I'd edited the name to compare the 2

* Revert "Update jira-dark-gray.user.css"

This reverts commit 2f3588a215e2432bb530da9231cfe4d43316e134.

* Revert "Fixed lots of font color issues and other bugs"

This reverts commit cec290919fb923f69b15041f706bd41518f934fd.

* Lots of color changes, easier to use and read

* Updated changes

* Newest color changes, fixes readability

--- a/jira-dark-gray.user.css
+++ b/jira-dark-gray.user.css
@@ -1,4 +1,4 @@
-/* ==UserStyle==
+/* ==UserStyle==	
 @name         Jira Dark Gray
 @namespace    github.com/aalvarado
 @version      1.12.1
@@ -23,7 +23,7 @@ regexp(".*.atlassian.net/secure.*") {
     .jRBaLt {
         color: #8ec4fd;
     }
-
+    
     .aZwtJ {
         box-shadow: none;
         margin: 0px;
@@ -221,9 +221,9 @@ regexp(".*.atlassian.net/secure.*") {
     section div[data-rbd-droppable-context-id] {
         background-color: #222;
     }
-
-    [data-test-id="software-board.board-area"] section span {
-        color: #ccc;
+    
+    [data-test-id="software-board.board-scroll"] section span {
+        color: #ccc !important;
     }
 
     section div[data-test-id="platform-board-kit.common.ui.column-header.header.column-header-container"] div {
@@ -340,7 +340,7 @@ regexp(".*.atlassian.net/secure.*") {
     nav a div,
     nav button,
     nav button div {
-        background-color: #444 !important;
+        background-color: #333 !important;
     }
 
     nav a {
@@ -706,6 +706,125 @@ regexp(".*.atlassian.net/secure.*") {
     .o8lyvj-0 {
         z-index: 2;
     }
+
+    section div[id="ReactVirtualized__Grid__innerScrollContainer"] div {
+        background-color: #222;
+    }
+    
+    .gnTJJk {
+        color: #ccc;
+    }
+    
+    .jDtDtm {
+        color: #8ec4fd;
+    }
+    
+    a {
+        color: #8ec4fd;
+    }
+    
+    a:hover {
+        color: #4ba1fb;
+    }
+    
+    .ReactVirtualized__Grid__innerScrollContainer {
+       background-color: #555 !important;
+   }
+   
+   [id^='react-select-']:hover {
+       background-color: #333 !important
+   }
+   
+   .cdELFE {
+       background-color: #202124;
+   }
+   
+   .iFVIyY {
+       background-color: #202124;
+   }
+   
+   .lnnurR {
+       background: #444;
+   }
+   
+   .cYQrJH {
+       color: #8ec4fd;
+   }
+
+   [aria-controls="HEADER-DROP-1"] {
+       background-color: #555;
+   }
+   
+   /* Fix the backlogs background and make text readable */
+   [data-test-id="software-backlog.card-list.card.card-contents.interaction-layer.accessible-card"] {
+       background-color: #666;
+   }
+   
+   a.cPExjy {
+       color: #8ec4fd !important;
+   }
+   
+   .dHCABi {
+       color: #fff;
+   }
+   
+   /* Fixes the Epic Left Rail in backlog */
+   
+   [data-test-id="software-backlog-panel.common.ui.panel.container"] {
+       background-color: #444;
+   }
+   
+   .cqHPyU {
+       color: #8ec4fd;
+   }
+   
+   .bAgqLe {
+       color: #8ec4fd;
+   }
+   
+   .css-1nnf97w {
+       color: #8ec4fd;
+   }
+   
+   .css-xua7vi {
+       color: #8ec4fd;
+   }
+   
+   .css-1gly9cj {
+       color: #8ec4fd;
+   }
+   
+    .css-1gly9cj:hover {
+       color: #fff;
+   }
+   
+    .css-1gly9cj:hover {
+       color: #fff;
+   }
+   
+   .css-1nnf97w [data-item-title] {
+       color: #fff;
+   }
+   
+   .css-1gly9cj {
+       color: #8ec4fd;
+   }
+   
+   .css-196lgr2 {
+       color: #8ec4fd;
+   }
+   .eRIObY {
+        color: #000;
+    }
+    
+    .ldGASN {
+        background: #444;
+    }
+    
+    span.css-19r5em7 {
+        color: #fff;
+    }
+    
 }
 
 @-moz-document regexp(".*.atlassian.net/projects.*") {
